--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "express server for my react application",
   "main": "server.js",
   "scripts": {
-    "start": " node ./bin/www",
-    "build": "cd client && npm run build",
-    "dev:express": "npm run build && nodemon --exec 'ts-node' server.ts"
+    "start": " node bin/www",
+    "build:dev": "cd client && npm run build",
+    "dev:express": "npm run build && family-travel/node_modules/.bin/nodemon --exec 'ts-node' server.ts"
   },
   "keywords": [],
   "author": "",
