--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "express server for my react application",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": " node bin/www",
     "build": "cd client && npm run build",
-    "dev:express": "npm run build:dev && nodemon --exec 'ts-node' server.ts"
+    "dev:express": "npm run build && nodemon --exec 'ts-node' server.ts"
   },
   "keywords": [],
   "author": "",
