--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": " node bin/www",
     "build": "npx tsc server.ts && cd client && npm run build",
+    "dev:build": "npx tsc server.ts && npm run dev:express",
     "dev:express": "npm run build && nodemon --exec 'ts-node' server.ts"
   },
   "keywords": [],
@@ -15,6 +16,8 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
     "mongodb": "^4.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
